--- a/revamp/10.1_plot-pca-phys-FULL.Rmd
+++ b/revamp/10.1_plot-pca-phys-FULL.Rmd
@@ -342,8 +342,6 @@ phys94.df <- fread(work.dir %&% "analysis_files/phys94-ld-assigned.txt")
 
 
 
-
-
 ```{r}
 
 pca_plot_phys94 <- function(pca.list,pcX,pcY,class.df){
@@ -426,4 +424,88 @@ ggsave(plt1,filename = plot.dir%&%"all-pca-plots.png",width=20,height=5.5)
 ggsave(plt1,filename = plot.dir%&%"all-pca-plots.pdf",width=20,height=5.5)
 
 ```
+
+
+
+# Udler 
+
+```{r}
+
+phys.df <- fread(work.dir %&% "analysis_files/physUDLER-ld-assigned.txt")
+
+```
+
+
+
+```{r}
+
+pca_plot_phys <- function(pca.list,pcX,pcY,class.df){
+  data.df <- pca.list[[1]]
+  pca.out <- pca.list[[2]]
+  pve.df <- pca.list[[3]]
+  pcXpve <- (filter(pve.df,grepl(gsub("PC","",pcX),
+                                 pve.df$PC))$pve %>% round(.,2)) * 100 
+  pcYpve <- (filter(pve.df,grepl(gsub("PC","",pcY),
+                                 pve.df$PC))$pve %>% round(.,2)) * 100
+  pca.df <- as.data.frame(pca.out$x) 
+  pca.df$Locus.ID <- data.df$Locus.ID
+  pca.df <- inner_join(data.df,pca.df,by="Locus.ID")
+  pca.df$assigned <- map(pca.df$Locus.ID,function(id){
+    filter(class.df,Locus.ID==id)$assigned_20
+  }) %>% as.character(.)
+  pca.df$physiology <- map(pca.df$Locus.ID,function(id){
+    phys <- filter(phys.df,Locus.ID==id)$Physiology %>% gsub("_","-",.)
+    ifelse(length(phys)>0,phys,"Unclassified")
+  }) %>% as.character(.)  
+  pca.df$assigned <- pca.df$assigned %>% firstup(.)
+  pca.df$maxppa <- map(pca.df$Locus.ID,function(id){
+    filter(maxppa.df,Locus.ID==id)$maxppa
+  }) %>% as.numeric(.)
+  
+  pca.df$physiology <- factor(pca.df$physiology,
+                              levels = c("Lipodystrophy","Obesity","Liver",
+                              "Proinsulin","Beta-Cell","Unclassified"))
+  plt <- ggplot(data=pca.df,aes_string(x=pcX,y=pcY)) + 
+    geom_point(shape=21,alpha=ifelse(pca.df$physiology=="Unclassified",0.1,1),
+               color="black",
+               aes(size=maxppa,fill=physiology)) + 
+    #scale_fill_brewer() + 
+    scale_fill_manual(values=c(viridis(100)[100],viridis(100)[90],
+                               viridis(100)[55],
+                               viridis(100)[30],viridis(100)[5],
+                              "ghostwhite"),
+                      name="Assigned Tissue") + 
+    scale_size(range = c(0.1,5),breaks=seq(0,1,0.2),name="Maximum PPA") + 
+    theme_classic() + 
+    xlab(pcX %&% " (" %&% pcXpve %&% "%)") + 
+    ylab(pcY %&% " (" %&% pcYpve %&% "%)")
+    
+}
+
+
+```
+
+```{r}
+
+pca.list.filt <- make_pca_inputs(filter(w.df,other<0.50),centerScale=FALSE) 
+pruneA.plt <- pca_plot_phys(pca.list.filt,"PC1","PC2",class.df2)
+pruneB.plt <- pca_plot_phys(pca.list.filt,"PC2","PC3",class.df2)
+
+ggsave(plot=pruneA.plt,filename=plot.dir%&%
+         "pca_phys_maxppa50-filtered-weighted-pc1-pc2_UDLER.pdf",
+       height=5.5,width=7)
+ggsave(plot=pruneB.plt,filename=plot.dir%&%
+         "pca_phys_maxppa50-filtered-weighted-pc2-pc3_UDLER.pdf",
+       height=5.5,width=7)
+ggsave(plot=pruneA.plt,filename=plot.dir%&%
+         "pca_phys_maxppa50-filtered-weighted-pc1-pc2_UDLER.png",
+       height=5.5,width=7)
+ggsave(plot=pruneB.plt,filename=plot.dir%&%
+         "pca_phys_maxppa50-filtered-weighted-pc2-pc3_UDLER.png",
+       height=5.5,width=7)
+```
+
+
+
+
 
