--- a/revamp/heterogeneity_profile.Rmd
+++ b/revamp/heterogeneity_profile.Rmd
@@ -160,19 +160,23 @@ het_plot <- function(locus.num){
   }) %>% as.integer(.) )==1,"bold","plain")
   
   plot.df$maxppa50 <- plot.df$max.ppa>0.5 # ifelse((plot.df$max.ppa>0.5)==TRUE,1.5,1)
-  gene <- input.df$symbol %>% unique(.)
+  #gene <- input.df$symbol %>% unique(.)
+  plot.df$gene <- input.df$symbol %>% unique(.)
   p <- ggplot(data=plot.df,aes(x=signal,y=toa)) + 
     geom_col(aes(fill=tissue,color=maxppa50),size=1) + 
     scale_fill_manual(values=c("grey","brown","red","gold1","olivedrab2")) + 
     scale_y_continuous(breaks=seq(0,1,0.2)) + 
     scale_color_manual(values = c("ghostwhite","black")) + 
     coord_cartesian(ylim=c(0,1),expand = F) + 
-    ggtitle(gene) + 
+    facet_wrap(~gene)+
+    #ggtitle(gene) + 
     theme_bw() + 
     theme(axis.title = element_blank(),
           legend.position = "none",
           axis.text.x=element_text(angle=30,vjust=0.9,hjust=0.9,
-                                   face=rs.font) ) 
+                                   face=rs.font),
+          strip.text = element_text(size=12,face="italic"),
+          strip.background = element_rect(fill="ghostwhite")) 
 }
 
 ```
