--- a/revamp/02.3_horizontal-stacked-barplots.Rmd
+++ b/revamp/02.3_horizontal-stacked-barplots.Rmd
@@ -136,7 +136,7 @@ ppa_plot <- function(ppa.df,col.vec=c("olivedrab2","red","gold1","brown","grey")
   plt <- ggplot(data=plot.df,aes(x=PlotID,
                                  y=Proportion,fill=Annotation)) + 
             geom_bar(stat="identity",color="black",size=0.2) + 
-            scale_y_continuous(breaks=seq(0,1,0.1)) + 
+            scale_y_continuous(breaks=seq(0,1,0.2)) + 
             xlab("Signal") + 
             coord_flip() + 
             #scale_y_reverse() + 
@@ -145,7 +145,8 @@ ppa_plot <- function(ppa.df,col.vec=c("olivedrab2","red","gold1","brown","grey")
   if(leg==FALSE){
     plt <- plt + theme(legend.position = "none")
   }
-  
+  plt <- plt + 
+    theme(axis.text = element_text(size=13))
   return(plt)
 }
 
@@ -187,20 +188,21 @@ keep.vec <- filter(df,max.ppa >= 0.50)$Locus.ID %>% unique(.)
 ```{r}
 
 
-grob1 <- all_tissues_plot(weighted.df,number=50)
-ggsave(plot=grob1,filename=plot.dir%&%"stacked_barplots_full-weighted.png",width=25,height=15)
+grob1 <- all_tissues_plot(weighted.df,number=20)
+ggsave(plot=grob1,filename=plot.dir%&%"stacked_barplots_full-weighted.png",width=25,height=8.5)
+ggsave(plot=grob1,filename=plot.dir%&%"stacked_barplots_full-weighted.pdf",width=25,height=8.5)
 
 ##grob2 <- all_tissues_plot(unweighted.df,number=50)
 ##ggsave(plot=grob2,filename=plot.dir%&%"stacked_barplots_full-unweighted.png",width=25,height=15)
 
-grob3 <- all_tissues_plot(filter(weighted.df,Locus.ID%in%keep.loci),number=50)
-ggsave(plot=grob3,filename=plot.dir%&%"stacked_barplots_snpcount100-weighted.png",width=27,height=12)
+#grob3 <- all_tissues_plot(filter(weighted.df,Locus.ID%in%keep.loci),number=50)
+#ggsave(plot=grob3,filename=plot.dir%&%"stacked_barplots_snpcount100-weighted.png",width=27,height=12)
 
 ##grob4 <- all_tissues_plot(filter(unweighted.df,Locus.ID%in%keep.loci),number=50)
 ##ggsave(plot=grob4,filename=plot.dir%&%"stacked_barplots_snpcount100-unweighted.png",width=27,height=12)
 
 
-grob5 <- all_tissues_plot(filter(weighted.df,Locus.ID%in%keep.vec),number=30)
+grob5 <- all_tissues_plot(filter(weighted.df,Locus.ID%in%keep.vec),number=20)
 ggsave(plot=grob5,filename=plot.dir%&%"stacked_barplots_maxppa50-weighted.png",width=25,height=8.5)
 ggsave(plot=grob5,filename=plot.dir%&%"stacked_barplots_maxppa50-weighted.pdf",width=25,height=8.5)
 
